DatNV: fix bug 126435

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <table style="margin-top: 10px;">
+            <table style="margin-top: 10px;" id="table_K6_K7_K8">
                 <tr>
                     <td>
                         <div id="K1_6" data-bind="ntsFormLabel: {required: false}" style="margin: 0px -20px 0px 182px;">
