--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/m/qmm020.m.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/m/qmm020.m.style.css
@@ -14,3 +14,11 @@
 #multi-list_container {
     border: 1px solid #AAB7B8 !important;
 }
+
+#M1_1 {
+    position: relative !important;
+    overflow: auto;
+    overflow-y: hidden;
+    -ms-overflow-x: hidden;
+    white-space: nowrap;
+}
