--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/qmm020.j.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/qmm020.j.style.css
@@ -10,8 +10,20 @@
     margin-bottom: 10px;
     margin-top: 5px;
     padding-left: 15px;
+    width: 240px;
 }
 #center {
     margin: auto;
     padding: 10px;
+}
+#J7_1 {
+    float: left;
+}
+
+#J1_1 {
+    position: relative !important;
+    overflow: auto;
+    overflow-y: hidden;
+    -ms-overflow-x: hidden;
+    white-space: nowrap;
 }
