--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/qmm020.l.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/qmm020.l.style.css
@@ -10,10 +10,18 @@
     margin-top: 9px;
 }
 
-#control-group-l5-l6, #L1_2, #L1_1 {
+#control-group-l5-l6, #L1_1 {
     position: relative !important;
     overflow: auto;
     overflow-y: hidden;
     -ms-overflow-x: hidden;
     white-space: nowrap;
+}
+
+#L1_2 {
+    position: relative !important;
+    overflow: auto;
+    overflow-y: hidden;
+    -ms-overflow-x: hidden;
+    white-space: pre;
 }
