--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
@@ -10,7 +10,8 @@
                                 data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
 
                         <button id="A1_3" tabindex="3"
-                                data-bind="click: openScreenL, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_3')}</button>
+                                data-bind="click: $vm.viewmodelA.openScreenL, enable: true">#{i18n.getText('QMM020_3')}</button>
+
 
                         <button id="A1_4" tabindex="4"
                                 data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
