--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/004/a/index.xhtml
@@ -38,6 +38,7 @@
 						data-bind="click: remove, enable: lstCate().length >0 &amp; !checkUpdate()">#{i18n.getText('KML004_3')}</button>
 					<!-- A1_4 -->
 					<button tabindex="4" id="Close_BTN" data-bind="click: closeDialog">#{i18n.getText('KML004_4')}</button>
+					<button id="print-button" tabindex="10" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
 				</div>
 			</div>
 			<div id="contents-area">
