fixbug 102751: edit code

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/y/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/y/index.xhtml
@@ -84,7 +84,7 @@
 					</td>
 					<td width='400px'>
 							<label data-bind="text : exterOutExecLog().totalErrorCount"></label>
-							<label data-bind="text : exterOutExecLog().processUnit"></label>
+							<label data-bind="text : '#{i18n.getText('CMF002_528')}'"></label>
 					</td>
 					
 				</tr>
