DatNV: fix bug 126435

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/qmm020.j.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/qmm020.j.style.css
@@ -27,3 +27,10 @@
     -ms-overflow-x: hidden;
     white-space: nowrap;
 }
+#J1_10 {
+    font-size: 14px;
+    margin: 10px 10px 10px 31px;
+    padding: 13px 12px 13px 15px;
+    white-space: pre;
+    width: 312px;
+}
