--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/index.xhtml
@@ -17,7 +17,7 @@
     <ui:define name="content">
         <div id="contents-area">
             <div id="title" style="margin-bottom: 10px">
-                <span id="L1_1" class="label" style="margin-bottom: 10px">#{i18n.getText('QMM020_71')}</span>
+                <span id="L1_1" class="label" style="margin-bottom: 10px; font-size: 19px;">#{i18n.getText('QMM020_71')}</span>
                 <span id="L1_2" class="label warning">#{i18n.getText('QMM020_72')}</span>
             </div>
 
