qmm017 update coding d

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
@@ -50,8 +50,7 @@
         </div>
     </div>
     <div class="fixed-flex-layout-right">
-        <div id="tab-panel"
-             data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}"
+        <div tabindex="10" id="tab-panel" data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}"
              style="width: 850px; margin-bottom: 20px;">
             <div class="tab-content-1" data-bind="with: selectedFormula">
                 <div class="tab-row">
