qmm016: fix bugs

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
@@ -72,10 +72,10 @@
                     </div>
                     <div>
                         <!--A2_4 履歴追加ボタン-->
-                        <button id="A2_4" tabindex="8"
+                        <button id="A2_4" tabindex="8" class="small"
                                 data-bind="click: createNewHistory, enable: updateMode()">#{i18n.getText('QMM008_8')}</button>
                         <!--A2_5 履歴編集ボタン-->
-                        <button style="float: right" id="A2_5" tabindex="9"
+                        <button style="float: right" id="A2_5" tabindex="9" class="small"
                                 data-bind="click: editHistory, enable: selectedWageTableIdentifier().length > 3">#{i18n.getText('QMM008_9')}</button>
                     </div>
                     <div style="margin-top: 15px;">
