--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -35,11 +35,11 @@
                                                     dateFormat: 'yearmonth'
                                                 }">
                         </div>
-                        <span style="margin-left: 15px;" class="label">#{i18n.getText('QMM020_56')}</span>
+                        <span style="margin-left: 15px; margin-right: 15px;" class="label">#{i18n.getText('QMM020_56')}</span>
                     </td>
                     <td>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.j.viewmodel.MODE_SCREEN.MODE_THREE">
-                            <div id="J1_13" style="margin: 0px 10px 0px 15px;" tabindex="2" data-bind="ntsDatePicker: {
+                            <div id="J1_13" tabindex="2" data-bind="ntsDatePicker: {
 												name: '#{i18n.getText('QMM020_63')}',
 												value: endYearMonthPeriod,
 												required: true,
