--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/index.xhtml
@@ -47,13 +47,13 @@
                 <!-- 開始年月和暦 -->
                 <div id="B1_7_wrap">
                     <com:ko-if bind="((yearMonthJapan() != null) &amp;&amp; (yearMonthJapan() != ''))">
-                        <span class="pull-right">)</span>
+                        <span class="pull-right">）</span>
                         <label class="pull-right" id="B1_7" data-bind="text: yearMonthJapan"></label>
-                        <span class="pull-right">(</span>
+                        <span class="pull-right">（</span>
                     </com:ko-if>
                 </div>
                 <!-- 終了年月 -->
-                <label id="B1_8"> ~ #{i18n.getText('QMM019_44')}</label>
+                <label id="B1_8"> ～ #{i18n.getText('QMM019_44')}</label>
             </div>
             <div class="valign-center control-group">
                 <!-- レイアウトの引き継ぎ -->
