--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
@@ -61,10 +61,10 @@
                 </div>
                 <div class="cell valign-center">
                     <com:ko-if bind="(layoutPatternCloneText() != '')">
-                        <label>( </label>
+                        <label>（ </label>
                         <!--H1_7-->
                         <label id="H1_7" class="label" data-bind="text: layoutPatternCloneText"/>
-                        <label> )</label>
+                        <label> ）</label>
                     </com:ko-if>
                 </div>
             </div>
@@ -109,9 +109,9 @@
                         required: true}"/>
                     <!--H1_14-->
                     <com:ko-if bind="(startDateJp() != null)">
-                        <span>  (</span>
+                        <span> （</span>
                         <span class="label" data-bind="text: startDateJp"/>
-                        <span>)</span>
+                        <span>）</span>
                     </com:ko-if>
                 </div>
             </div>
