--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
@@ -30,13 +30,13 @@
                 <label id="C1_2" data-bind="text: statementCode"></label>
                 <!-- 明細書名 -->
                 <label id="C1_3" data-bind="text: statementName"></label>
-                <label>(</label>
+                <label>（</label>
                 <!-- 開始年月 -->
                 <label id="C1_4" data-bind="text: startMonth"></label>
-                <label> ~ </label>
+                <label> ～ </label>
                 <!-- 終了年月 -->
                 <label id="C1_5" data-bind="text: endMonth"></label>
-                <label>)</label>
+                <label>）</label>
             </div>
             <div class="valign-center control-group">
                 <!-- 編集方法の選択 -->
@@ -67,7 +67,7 @@
                                                             enable: itemHistoryEdit() == 1,
                                                             dateFormat: 'yearmonth'}"></div>
                         <!-- 終了年月 -->
-                        <label>  ~  </label>
+                        <label>  ～  </label>
                         <label id="C1_13" data-bind="text: endMonth"></label>
                     </div>
                 </div>
