--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/001/e/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/001/e/index.xhtml
@@ -78,6 +78,10 @@
 							<td class="fix-width">#{i18n.getText('KDW001_15')}</td>　
 							<td><span data-bind="text: startPeriod"></span> ～ <span data-bind="text: endPeriod"></span></td>
 						</tr>
+						<tr data-bind="visible : disableMonthResult()">
+							<td class="fix-width">#{i18n.getText('KDW001_117')}</td>　
+							<td><span data-bind="text: startMonthResult"></span> ～ <span data-bind="text: endMonthResult"></span>#{i18n.getText('KDW001_118')}</td>
+						</tr>
 					</table>
 				</div>
 				
