--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/c/index.xhtml
@@ -50,7 +50,7 @@
 								rows: 15,
 								name: '#[CMF002_346]', 
 								multiple: false,
-								dataSource: $parent.listStandardOutputItem,
+								dataSource: $parent.listStandardOutputItemTemp,
 								primaryKey: 'dispOutputItemCode', 
 								value: $parent.selectedStandardOutputItemCode,
 								columns: [
