DatNV: fix bug 127088

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index1.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index1.xhtml
@@ -24,8 +24,9 @@
                 <tr>
                     <td>
                         <div id="J1_2" data-bind="ntsFormLabel: {required: true}" style="margin: 0px 10px 0px 10px;">
-                            <span class="label">#{i18n.getText('QMM020_54')}</span>
-                            <div id="J1_3" style="margin-left: 70px;" tabindex="1" data-bind="ntsDatePicker: {
+                            <span class="label J1_2_lable">#{i18n.getText('QMM020_54')}</span>
+                        </div>
+                        <div id="J1_3" style="margin-left: 10px;" tabindex="1" data-bind="ntsDatePicker: {
 												name: '#{i18n.getText('QMM020_55')}',
 												value: startYearMonthPeriod,
 												required: true,
@@ -33,10 +34,8 @@
 												valueFormat: 'YYYYMM',
 												dateFormat: 'yearmonth'
 												}">
-                            </div>
-                            <span style="margin-left: 15px;" class="label">#{i18n.getText('QMM020_56')}</span>
                         </div>
-
+                        <span style="margin:0px 15px;" class="label">#{i18n.getText('QMM020_56')}</span>
                     </td>
                     <td>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.j.viewmodel.MODE_SCREEN.MODE_THREE">
