--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -23,10 +23,10 @@
             <table>
                 <tr>
                     <td>
-                        <div id="J1_2'" data-bind="ntsFormLabel: {required: true}" style="margin: 0px 10px 0px 10px;">
-                            <span class="label">#{i18n.getText('QMM020_54')}</span>
+                        <div id="J1_2" data-bind="ntsFormLabel: {required: true}" style="margin: 0px 10px 0px 10px;">
+                            <span class="label J1_2_lable">#{i18n.getText('QMM020_54')}</span>
                         </div>
-                        <div id="J1_3" style="" tabindex="2" data-bind="ntsDatePicker: {
+                        <div id="J1_3" tabindex="2" data-bind="ntsDatePicker: {
                                                     name: '#{i18n.getText('QMM020_63')}',
                                                     value: startYearMonthPeriod,
                                                     required: true,
@@ -35,7 +35,7 @@
                                                     dateFormat: 'yearmonth'
                                                 }">
                         </div>
-                        <span style="margin-left: 15px; margin-right: 15px;" class="label">#{i18n.getText('QMM020_56')}</span>
+                        <span style="margin:0px 15px;" class="label">#{i18n.getText('QMM020_56')}</span>
                     </td>
                     <td>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.j.viewmodel.MODE_SCREEN.MODE_THREE">
@@ -65,9 +65,9 @@
 
                 <div style="display: inline-flex;margin-top: 10px;">
                     <div id="J1_6" data-bind="ntsFormLabel: { required: true}" style="margin: 0px 10px 0px 10px;">
-                        <span class="label">#{i18n.getText('QMM020_58')}</span>
+                        <span class="label J1_2_lable">#{i18n.getText('QMM020_58')}</span>
                     </div>
-                    <div id="J7_1" tabindex="3" style="margin-top: 10px">
+                    <div id="J7_1" tabindex="3" style="margin-top: 10px;">
                         <div  class="cell" tabIndex="-1"
                              data-bind="ntsRadioButton: {
 										checked: transferMethod,
@@ -112,7 +112,7 @@
                 <div class=" table table-col-2">
                     <div class="cell valign-top" style="display: inline-flex;margin-top: 10px;">
                         <div id="J1_6" data-bind="ntsFormLabel: { required: true}" style="margin-left: 10px;">
-                            <span class="label">#{i18n.getText('QMM020_58')}</span>
+                            <span class="label J1_2_lablex">#{i18n.getText('QMM020_58')}</span>
                         </div>
                     </div>
                     <div class ="cell valign-top">
