update code KMS 001

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/a/base.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/a/base.xhtml
@@ -11,6 +11,8 @@
 			<span class="action-bar">
 			<ui:insert name="extended-action-bar" />
 			<button tabindex="5" data-bind="click: openDialogCommonSetting">#{i18n.getText('KSM001_51')}</button>
+			<!-- Print Excel -->
+            <button tabindex="5" id="print-button" data-bind="click: saveAsExcel" style="width: 120px;">#{i18n.getText('KSM001_196')}</button>
 			</span>
 		</div>
 		<div class="contents-area cf" data-bind="visible: true" style="display: none">
