--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
@@ -19,6 +19,9 @@
 				</div>
 				 -->
 				<div tabindex="-1" id="contents-area" class="fixed-flex-layout">
+				<div>
+				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+				</div>
 					<div tabindex="-1" class="master_setting caret-inline" style="width: 304px;">
 						<div tabindex="-1" class="master_title_left" style="width: 265px;">
 							<label tabindex="-1" class="label_master">#{i18n.getText('KMK011_40')}</label>
