--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -46,7 +46,7 @@
                                     fields: ['code', 'name'],
                                     mode: 'listbox'}"></div>
                             </div>
-                            <div id="D2_5" data-bind="ntsListBox: {
+                            <div class ="list-box" id="D2_5" data-bind="ntsListBox: {
                             options: statementItemList,
                             optionsValue: 'code',
                             optionsText: 'name',
@@ -101,7 +101,7 @@
                                     fields: ['code', 'name'],
                                     mode: 'listbox'}"></div>
                             </div>
-                            <div id="D5_5" data-bind="ntsListBox: {
+                            <div class ="list-box" id="D5_5" data-bind="ntsListBox: {
                             options: unitPriceItemList,
                             optionsValue: 'code',
                             optionsText: 'name',
@@ -269,7 +269,7 @@
                                 fields: ['formulaCode', 'formulaName'],
                                 mode: 'listbox'}"></div>
                             </div>
-                            <div id="D9_5" data-bind="ntsListBox: {
+                            <div class ="list-box" id="D9_5" data-bind="ntsListBox: {
                             options: formulaList,
                             optionsValue: 'formulaCode',
                             optionsText: 'formulaName',
@@ -279,7 +279,7 @@
                             rows: 8,
                             columns: [
                                 { key: 'formulaCode', length: 2 },
-                                { key: 'formulaName', length: 8 }
+                                { key: 'formulaName', length: 8}
                             ]}">
                             </div>
                             <div>
@@ -323,7 +323,7 @@
                                     mode: 'listbox'}">
                                 </div>
                             </div>
-                            <div id="D10_5" data-bind="ntsListBox: {
+                            <div class ="list-box" id="D10_5" data-bind="ntsListBox: {
                             options: wageTableList,
                             optionsValue: 'code',
                             optionsText: 'name',
