--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/b/index.xhtml
@@ -11,6 +11,8 @@
         <span style="margin-left: 20px; width: 270px; vertical-align: text-bottom " class="limited-label"
               data-bind="text: formulaName"></span>
         <button tabindex="11" id = "B1_4" data-bind = "click: function(){$vm.doMasterConfiguration()}">#{i18n.getText('QMM017_27')}</button>
-        <div style = "display: inline-block" data-bind = "text: displaySettingMethod"></div>
+        <div style = "display: inline-block" data-bind = "with: $vm.masterBasicCalculationFormula">
+            <div data-bind = "text: displaySetting"></div>
+        </div>
     </div>
 </ui:composition>
