--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
@@ -73,10 +73,10 @@
                     <div>
                         <!--A2_4 履歴追加ボタン-->
                         <button id="A2_4" tabindex="8" class="small"
-                                data-bind="click: createNewHistory, enable: updateMode()">#{i18n.getText('QMM008_8')}</button>
+                                data-bind="click: createNewHistory, enable: updateMode() &amp;&amp; !addHistoryMode()">#{i18n.getText('QMM008_8')}</button>
                         <!--A2_5 履歴編集ボタン-->
                         <button style="float: right" id="A2_5" tabindex="9" class="small"
-                                data-bind="click: editHistory, enable: selectedWageTableIdentifier().length > 3">#{i18n.getText('QMM008_9')}</button>
+                                data-bind="click: editHistory, enable: selectedWageTableIdentifier().length > 3 &amp;&amp; !addHistoryMode()">#{i18n.getText('QMM008_9')}</button>
                     </div>
                     <div style="margin-top: 15px;">
                         <!--A2_6 賃金テーブル一覧	-->
