--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/d/index.xhtml
@@ -36,6 +36,7 @@
 <!-- 					<button  data-bind="click: backToHistorySelection" tabindex="2">#{i18n.getText('KMF001_27')}</button> -->
 					<a class="goback" data-bind="ntsLinkButton: { jump: '/view/kmf/001/a/index.xhtml' }"  tabindex="2">#{i18n.getText('KMF001_27')}</a>
 					<button class="proceed" data-bind="click: registerWholeCompany, enable: isManaged" tabindex="3">#{i18n.getText('KMF001_28')}</button>
+					<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
 					<!-- <div class="register-annual-holiday-table"><a href="#register-annual-holiday-table" tabindex="4">#{i18n.getText('KMF001_29')}</a></div> -->
 				</div>
 				<div class="ruledLine"></div>
