qmm017 update coding d

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
@@ -70,8 +70,8 @@
                 </div>
                 <div class="tab-row" data-bind="with: $vm.selectedHistory">
 
-                    <div id="A6_1" class="column-1"
-                         data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_16')}</div>
+                    <div class="column-1"
+                         data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_12')}</div>
                     <!--A3_6 -->
                     <div id="A3_6" tabindex="13"
                          data-bind="ntsDatePicker: {
