Hoidd update KML004 + KDL024

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/024/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/024/a/index.xhtml
@@ -27,6 +27,7 @@
 				<button id="btnDel" class="btnMenu delete_btn btn_width danger"
 					data-bind="click: del, enable: !isNew()" tabindex="3">#{i18n.getText('KDL024_3')}</button>
 				<button id="btnClose" class="btnMenu" data-bind="click: close" tabindex="4">#{i18n.getText('KDL024_4')}</button>
+				<button id="print-button" tabindex="9" data-bind="click: exportExcel">#{i18n.getText('KDL024_14')}</button>
 			</div>
 			<div id="content-area" class="cf">
 				<div class="left-content">
