DatNV: fix bug 125844

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/contentsB.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/contentsB.xhtml
@@ -73,7 +73,7 @@
                     <!--B2_5-->
                     <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM031_18')}</div>
                     <!-- B2_6 -->
-                    <button class="small" tabindex="11" data-bind="click: openD"
+                    <button id="B2_6" class="small" tabindex="11" data-bind="click: openD"
                             style="margin-left: 50px;">#{i18n.getText('QMM031_18')}</button>
                 </div>
             </div>
