--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
@@ -53,16 +53,16 @@
 	                    <td style="text-align: center;">
 	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
 	                            <input style="width: 20px;" id="F2_8"
-	                                   data-bind="ntsNumberEditor: {constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
+	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
 	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
 	                            <input style="width: 20px;" id="F2_10"
-	                                   data-bind="ntsNumberEditor: {constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
+	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;">
 	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
 	                            <input style="width: 20px;" id="F2_11"
-	                                   data-bind="ntsNumberEditor: {constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
+	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
 	                        </div>
 	                    </td>
 	                </tr>
@@ -74,16 +74,16 @@
 	                    <td style="text-align: center;">
 	                        <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
 	                            <input style="width: 20px;" id="F2_15"
-	                                   data-bind="ntsNumberEditor: {constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
+	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
 	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
 	                            <input style="width: 20px;" id="F2_17"
-	                                   data-bind="ntsNumberEditor: {constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
+	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;">
 	                        <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
 	                            <input style="width: 20px;" id="F2_18"
-	                                   data-bind="ntsNumberEditor: {constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
+	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
 	                        </div>
 	                    </td>
 	                </tr>
@@ -204,7 +204,7 @@
 					                    <com:ko bind="listSecondDms" tag="foreach">
 								            <td style="border: 1px solid #CCC; vertical-align: middle;">
 					 				            <div style="height: 32px; width: 150px; text-align: center;">
-					 				            	<input data-bind="ntsNumberEditor: {
+					 				            	<input class="input-amount" data-bind="ntsNumberEditor: {
 						  								option: { grouplength: 3, width: '120px' }, 
 						   								name: '#[QMM016_39]', 
 						   								value: paymentAmount, 
